2008-02-28  Johan Dahlin  <johan@gnome.org>

	* sv.po: Fix a few typos in the swedish translation.

2008-02-15  Johan Dahlin  <johan@gnome.org>

	* pt_BR.po: The gtk+ translation for next in the wizard is 'Frente'.

2008-02-07  Johan Dahlin  <johan@gnome.org>

	* POTFILES.in: Update

2008-01-31  Johan Dahlin  <johan@gnome.org>

	* POTFILES.in: Update

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* sv.po: Update swedish translation.

	* POTFILES.in: Add missing files which intltool now warns us about.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* ChangeLog: add new separate changelog, since intltool requires it