@@ -1,3 +1,7 @@
+2008-04-15  Johan Dahlin  <johan@gnome.org>
+
+	* POTFILES.in: Update, add dirac files
+
 2008-02-28  Johan Dahlin  <johan@gnome.org>
 
 	* sv.po: Fix a few typos in the swedish translation.
